<resources>
    <string name="app_name">Logue</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_username">John Doe</string>
    <string name="settings_default_status">online</string>
    <string name="account_info">Account</string>
    <string name="settings_default_number">+375331234567</string>
    <string name="phone_number">Phone number</string>
    <string name="username">Username</string>
    <string name="bio_settings">Bio</string>
    <string name="write_about_yourself">Write about yourself</string>
    <string name="change_name">Change name</string>
    <string name="exit">Exit</string>
    <string name="clear_chat">Clear chat</string>
    <string name="delete_chat">Delete chat</string>
    <string name="register_phone_hint">-------------</string>
    <string name="button_next">button next</string>
    <string name="enter_a_code">Enter a code</string>
    <string name="check_a_verification_code_in_your_phone">Check a verification code in your phone</string>
    <string name="register_hint_default_code">- - - - - -</string>
    <string name="register_title_your_phone">Your phone</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="settings_hint_input_name">Name</string>
    <string name="settings_hint_input_surname">Surname</string>
    <string name="settings_toast_name_is_empty">Name cannot be empty!</string>
    <string name="toast_data_updated">Data updated</string>
    <string name="settings_input_username">Input username</string>
    <string name="user_already_exist">User already exist</string>
    <string name="field_is_empty">Field is empty</string>
    <string name="settings_input_bio">Input bio</string>
</resources>